fix white space in verbatim issue
git-svn-id: file:///srv/svn/publican/trunk@494 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/en-US/css/common.css
+++ b/publican/content/common/en-US/css/common.css
@@ -500,6 +500,13 @@ h3.author {
 	color: #00774B;
 }
 
+.hl-directive {
+	color: #002F5D;
+}
+
+.hl-doctype {
+	color: #002F5D;
+}
 
 
 /*Lists*/
